--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
-
-<html>
-    <head>
-        <title>ddd</title>
-    </head>
-    <body>
-        <h1>HЫLLO</h1>
-    </body>
+<!DOCTYPE html>
+<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
+<head>
+	<title>ЧО</title>
+</head>
+<body>
+    ИДИ СЮДА
+</body>
 </html>
