--- a/index.html
+++ b/index.html
@@ -1,9 +1,10 @@
 <!DOCTYPE html>
-<html xmlns="http://www.w3.org/1999/xhtml" xml:lang="en">
-<head>
-	<title>ЧО</title>
-</head>
-<body>
-    ИДИ СЮДА
-</body>
+<html>
+	<head>
+		<meta charset="utf-8">
+		<title>ЧО</title>
+	</head>
+	<body>
+		ИДИ СЮДА
+	</body>
 </html>
