--- a/index.html
+++ b/index.html
@@ -1,10 +1,122 @@
 <!DOCTYPE html>
 <html>
-	<head>
-		<meta charset="utf-8">
-		<title>ЧО</title>
-	</head>
-	<body>
-		ИДИ СЮДА
-	</body>
+<head>
+	<meta charset="utf-8">
+	<title>ГЕРОИ CALL & DUTY FOREVER: WILD HUNT</title>
+</head>
+<body>
+	<table border="1" style="text-align: center; width: 100%; border-collapse: collapse;">
+		<tr>
+			<td></td><td></td><td><strong>МТ-301</strong></td><td><strong>МХ-301</strong></td><td><strong>КБ-301</strong></td><td><strong>КН-301</strong></td><td><strong>КН-302</strong></td><td><strong>ФТ-301</strong></td><td><strong>ПИ-301</strong></td>
+		</tr>
+		<tr>
+			<td rowspan="6"><strong>П<br>О<br>Н<br>Е<br>Д<br>Е<br>Л<br>Ь<br>Н<br>И<br>К</strong></td><td><strong>I<br>9:00</strong></td><td>Физика, 628</td><td>УМФ, 540</td><td>ТЧМК, 625</td><td></td><td></td><td></td><td>Прогр. Инж., 611</td>
+		</tr>
+		<tr>
+			<td><strong>II<br>10:40</strong></td><td>Функ.ан, 628</td><td>УМФ, 540</td><td>ТЧМК, 625</td><td>Базы Данных, 511</td><td>ДУ, 515</td><td>КА, 512</td><td>Прогр. Инж., 514</td>
+		</tr>
+		<tr>
+			<td><strong>III<br>12:50</strong></td><td></td><td>Физ-мех практика, 149</td><td colspan="4">Базы Данных, 632</td><td>КА, 628</td>
+		</tr>
+		<tr>
+			<td><strong>IV<br>14:30</strong></td><td></td><td></td><td>Базы Данных, 526</td><td>КА, 625</td><td>КА, 534</td><td></td><td></td>
+		</tr>
+		<tr>
+			<td><strong>V<br>16:10</strong></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
+		</tr>
+		<tr>
+			<td><strong>VI<br>17:50</strong></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
+		</tr>
+		<tr>
+			<td rowspan="6"><strong>В<br>Т<br>О<br>Р<br>Н<br>И<br>К</strong></td><td><strong>I<br>9:00</strong></td>
+		</tr>
+		<tr>
+			<td><strong>II<br>10:40</strong></td>
+		</tr>
+		<tr>
+			<td><strong>III<br>12:50</strong></td>
+		</tr>
+		<tr>
+			<td><strong>IV<br>14:30</strong></td>
+		</tr>
+		<tr>
+			<td><strong>V<br>16:10</strong></td>
+		</tr>
+		<tr>
+			<td><strong>VI<br>17:50</strong></td>
+		</tr>
+		<tr>
+			<td rowspan="6"><strong>С<br>Р<br>Е<br>Д<br>А</strong></td><td><strong>I<br>9:00</strong></td>
+		</tr>
+		<tr>
+			<td><strong>II<br>10:40</strong></td>
+		</tr>
+		<tr>
+			<td><strong>III<br>12:50</strong></td>
+		</tr>
+		<tr>
+			<td><strong>IV<br>14:30</strong></td>
+		</tr>
+		<tr>
+			<td><strong>V<br>16:10</strong></td>
+		</tr>
+		<tr>
+			<td><strong>VI<br>17:50</strong></td>
+		</tr>
+		<tr>
+			<td rowspan="6"><strong>Ч<br>Е<br>Т<br>В<br>Е<br>Р<br>Г</strong></td><td><strong>I<br>9:00</strong></td>
+		</tr>
+		<tr>
+			<td><strong>II<br>10:40</strong></td>
+		</tr>
+		<tr>
+			<td><strong>III<br>12:50</strong></td>
+		</tr>
+		<tr>
+			<td><strong>IV<br>14:30</strong></td>
+		</tr>
+		<tr>
+			<td><strong>V<br>16:10</strong></td>
+		</tr>
+		<tr>
+			<td><strong>VI<br>17:50</strong></td>
+		</tr>
+		<tr>
+			<td rowspan="6"><strong>П<br>Я<br>Т<br>Н<br>И<br>Ц<br>А</strong></td><td><strong>I<br>9:00</strong></td>
+		</tr>
+		<tr>
+			<td><strong>II<br>10:40</strong></td>
+		</tr>
+		<tr>
+			<td><strong>III<br>12:50</strong></td>
+		</tr>
+		<tr>
+			<td><strong>IV<br>14:30</strong></td>
+		</tr>
+		<tr>
+			<td><strong>V<br>16:10</strong></td>
+		</tr>
+		<tr>
+			<td><strong>VI<br>17:50</strong></td>
+		</tr>
+		<tr>
+			<td rowspan="6"><strong>С<br>У<br>Б<br>Б<br>О<br>Т<br>А</strong></td><td><strong>I<br>9:00</strong></td>
+		</tr>
+		<tr>
+			<td><strong>II<br>10:40</strong></td>
+		</tr>
+		<tr>
+			<td><strong>III<br>12:50</strong></td>
+		</tr>
+		<tr>
+			<td><strong>IV<br>14:30</strong></td>
+		</tr>
+		<tr>
+			<td><strong>V<br>16:10</strong></td>
+		</tr>
+		<tr>
+			<td><strong>VI<br>17:50</strong></td>
+		</tr>
+	</table>
+</body>
 </html>
