--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<title>ГЕРОИ CALL & DUTY FOREVER: WILD HUNT</title>
 </head>
 <body>
-	<table style="border: 1; text-align: center; width: 100%; border-collapse: collapse;">
+	<table style="border: 1px solid black; text-align: center; width: 100%; border-collapse: collapse;">
 		<tr>
 			<td></td><td></td><td><strong>МТ-301</strong></td><td><strong>МХ-301</strong></td><td><strong>КБ-301</strong></td><td><strong>КН-301</strong></td><td><strong>КН-302</strong></td><td><strong>ФТ-301</strong></td><td><strong>ПИ-301</strong></td>
 		</tr>
