--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 	<meta charset="utf-8">
 	<title>ГЕРОИ CALL & DUTY FOREVER: WILD HUNT</title>
 	<style>
-		table, td, th { 
+		table { 
 			border: 1px solid black;
 		}
 	</style>
