--- a/index.html
+++ b/index.html
@@ -3,9 +3,17 @@
 <head>
 	<meta charset="utf-8">
 	<title>ГЕРОИ CALL & DUTY FOREVER: WILD HUNT</title>
+	<style>
+		table {
+			border: 1px solid black;
+			text-align: center;
+			width: 100%;
+			border-collapse: collapse;
+		}
+	</style>
 </head>
 <body>
-	<table style="border: 1px solid black; text-align: center; width: 100%; border-collapse: collapse;">
+	<table style=" ">
 		<tr>
 			<td></td><td></td><td><strong>МТ-301</strong></td><td><strong>МХ-301</strong></td><td><strong>КБ-301</strong></td><td><strong>КН-301</strong></td><td><strong>КН-302</strong></td><td><strong>ФТ-301</strong></td><td><strong>ПИ-301</strong></td>
 		</tr>
