--- a/index.html
+++ b/index.html
@@ -4,11 +4,14 @@
 	<meta charset="utf-8">
 	<title>ГЕРОИ CALL & DUTY FOREVER: WILD HUNT</title>
 	<style>
-		table, td, th {
+		table {
 			border: 1px solid black;
 			text-align: center;
 			width: 100%;
 			border-collapse: collapse;
+		}
+		td, th {
+			border: 1px solid black;
 		}
 	</style>
 </head>
