--- a/index.html
+++ b/index.html
@@ -1,3 +1,4 @@
+
 <!DOCTYPE html>
 <html lang="ru">
 <head>
@@ -41,97 +42,97 @@
 		</tr>
 		<tr>
 			<td rowspan="6"><strong>В<br>Т<br>О<br>Р<br>Н<br>И<br>К</strong></td>
-			<td><strong>I<br>9:00</strong></td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
+			<td><strong>I<br>9:00</strong></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
 		</tr>
 		<tr>
-			<td><strong>II<br>10:40</strong></td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
+			<td><strong>II<br>10:40</strong></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
 		</tr>
 		<tr>
-			<td><strong>III<br>12:50</strong></td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
+			<td><strong>III<br>12:50</strong></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
 		</tr>
 		<tr>
-			<td><strong>IV<br>14:30</strong></td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
+			<td><strong>IV<br>14:30</strong></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
 		</tr>
 		<tr>
-			<td><strong>V<br>16:10</strong></td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
+			<td><strong>V<br>16:10</strong></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
 		</tr>
 		<tr>
-			<td><strong>VI<br>17:50</strong></td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
+			<td><strong>VI<br>17:50</strong></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
 		</tr>
 		<tr>
 			<td rowspan="6"><strong>С<br>Р<br>Е<br>Д<br>А</strong></td>
-			<td><strong>I<br>9:00</strong></td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
+			<td><strong>I<br>9:00</strong></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
 		</tr>
 		<tr>
-			<td><strong>II<br>10:40</strong></td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
+			<td><strong>II<br>10:40</strong></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
 		</tr>
 		<tr>
-			<td><strong>III<br>12:50</strong></td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
+			<td><strong>III<br>12:50</strong></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
 		</tr>
 		<tr>
-			<td><strong>IV<br>14:30</strong></td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
+			<td><strong>IV<br>14:30</strong></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
 		</tr>
 		<tr>
-			<td><strong>V<br>16:10</strong></td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
+			<td><strong>V<br>16:10</strong></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
 		</tr>
 		<tr>
-			<td><strong>VI<br>17:50</strong></td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
+			<td><strong>VI<br>17:50</strong></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
 		</tr>
 		<tr>
 			<td rowspan="6"><strong>Ч<br>Е<br>Т<br>В<br>Е<br>Р<br>Г</strong></td>
-			<td><strong>I<br>9:00</strong></td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
+			<td><strong>I<br>9:00</strong></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
 		</tr>
 		<tr>
-			<td><strong>II<br>10:40</strong></td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
+			<td><strong>II<br>10:40</strong></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
 		</tr>
 		<tr>
-			<td><strong>III<br>12:50</strong></td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
+			<td><strong>III<br>12:50</strong></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
 		</tr>
 		<tr>
-			<td><strong>IV<br>14:30</strong></td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
+			<td><strong>IV<br>14:30</strong></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
 		</tr>
 		<tr>
-			<td><strong>V<br>16:10</strong></td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
+			<td><strong>V<br>16:10</strong></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
 		</tr>
 		<tr>
-			<td><strong>VI<br>17:50</strong></td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
+			<td><strong>VI<br>17:50</strong></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
 		</tr>
 		<tr>
 			<td rowspan="6"><strong>П<br>Я<br>Т<br>Н<br>И<br>Ц<br>А</strong></td>
-			<td><strong>I<br>9:00</strong></td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
+			<td><strong>I<br>9:00</strong></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
 		</tr>
 		<tr>
-			<td><strong>II<br>10:40</strong></td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
+			<td><strong>II<br>10:40</strong></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
 		</tr>
 		<tr>
-			<td><strong>III<br>12:50</strong></td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
+			<td><strong>III<br>12:50</strong></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
 		</tr>
 		<tr>
-			<td><strong>IV<br>14:30</strong></td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
+			<td><strong>IV<br>14:30</strong></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
 		</tr>
 		<tr>
-			<td><strong>V<br>16:10</strong></td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
+			<td><strong>V<br>16:10</strong></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
 		</tr>
 		<tr>
-			<td><strong>VI<br>17:50</strong></td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
+			<td><strong>VI<br>17:50</strong></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
 		</tr>
 		<tr>
-			<td rowspan="6"><strong>С<br>У<br>Б<br>Б<br>О<br>Т<br>А</strong></td><td><strong>I<br>9:00</strong></td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
+			<td rowspan="6"><strong>С<br>У<br>Б<br>Б<br>О<br>Т<br>А</strong></td><td><strong>I<br>9:00</strong></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
 		</tr>
 		<tr>
-			<td><strong>II<br>10:40</strong></td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
+			<td><strong>II<br>10:40</strong></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
 		</tr>
 		<tr>
-			<td><strong>III<br>12:50</strong></td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
+			<td><strong>III<br>12:50</strong></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
 		</tr>
 		<tr>
-			<td><strong>IV<br>14:30</strong></td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
+			<td><strong>IV<br>14:30</strong></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
 		</tr>
 		<tr>
-			<td><strong>V<br>16:10</strong></td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
+			<td><strong>V<br>16:10</strong></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
 		</tr>
 		<tr>
-			<td><strong>VI<br>17:50</strong></td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
+			<td><strong>VI<br>17:50</strong></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
 		</tr>
 	</table>
 </body>
