--- a/index.html
+++ b/index.html
@@ -1,4 +1,5 @@
 
+
 <!DOCTYPE html>
 <html lang="ru">
 <head>
@@ -17,122 +18,162 @@
 	</style>
 </head>
 <body>
-	<table style=" ">
+	<table>
 		<tr>
 			<td></td><td></td><td><strong>МТ-301</strong></td><td><strong>МХ-301</strong></td><td><strong>КБ-301</strong></td><td><strong>КН-301</strong></td><td><strong>КН-302</strong></td><td><strong>ФТ-301</strong></td><td><strong>ПИ-301</strong></td>
 		</tr>
-		<tr>
-			<td rowspan="6"><strong>П<br>О<br>Н<br>Е<br>Д<br>Е<br>Л<br>Ь<br>Н<br>И<br>К</strong></td>
-			<td><strong>I<br>9:00</strong></td><td>Физика, 628</td><td>УМФ, 540</td><td>ТЧМК, 625</td><td></td><td></td><td></td><td>Прогр. Инж., 611</td>
+		<tr></tr>
+		</tr>
+			<td rowspan="12"><strong>П<br>О<br>Н<br>Е<br>Д<br>Е<br>Л<br>Ь<br>Н<br>И<br>К</strong></td>
+			<td rowspan="2"><strong>I<br>9:00</strong></td><td rowspan="2">Физика, 628</td><td rowspan="2">УМФ, 540</td><td height="50%"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2">Прогр. Инж., 611</td>
+		</tr>
+		<tr><td height="50%">ТЧМК, 625</td></tr>
+		</tr>
+			<td rowspan="2"><strong>II<br>10:40</strong></td><td rowspan="2">Функ.ан, 628</td><td rowspan="2">УМФ, 540</td><td rowspan="2">ТЧМК, 625</td><td rowspan="2">Базы Данных, 511</td><td rowspan="2">ДУ, 515</td><td height="50%">КА, 512</td><td rowspan="2">Прогр. Инж., 514</td>
+		</tr>
+		<tr><td height="50%"></td></tr>
+		</tr>
+			<td rowspan="2"><strong>III<br>12:50</strong></td><td rowspan="2"></td><td rowspan="2">Физ-мех практика, 149</td><td rowspan="2" colspan="4">Базы Данных, 632</td><td height="50%">КА, 628</td>
+		</tr>
+		<tr><td height="50%">КА, 514</td></tr>
+		</tr>
+			<td rowspan="2"><strong>IV<br>14:30</strong></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2">Базы Данных, 526</td><td height="50%">КА, 625</td><td height="50%">КА, 514</td><td rowspan="2"></td><td rowspan="2"></td>
+		</tr>
+		<tr><td height="50%">КА, 514</td><td height="50%">КА, 628</td></tr>
+		</tr>
+			<td rowspan="2"><strong>V<br>16:10</strong></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td>
+		</tr>
+		<tr></tr>
+		</tr>
+			<td rowspan="2"><strong>VI<br>17:50</strong></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td>
+		</tr>
+		<tr></tr>
+		</tr>
+			<td rowspan="12"><strong>В<br>Т<br>О<br>Р<br>Н<br>И<br>К</strong></td>
+			<td rowspan="2"><strong>I<br>9:00</strong></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2">Дг ТВ, 628</td>
+		</tr>
+		<tr></tr>
+		</tr>
+			<td rowspan="2"><strong>II<br>10:40</strong></td><td rowspan="2">Компл анализ, 513</td><td rowspan="2"></td><td rowspan="2" colspan="4">ТВ и МС, 632</td><td rowspan="2">Дг ТВ, 628</td>
+		</tr>
+		<tr></tr>
+		</tr>
+			<td rowspan="2"><strong>III<br>12:50</strong></td><td rowspan="2">Функ ан, 515</td><td rowspan="2">Уст и упр движ, 622</td><td rowspan="2" colspan="4">Ассемблер, 632</td><td rowspan="2">Базы данных, 540</td>
+		</tr>
+		<tr></tr>
+		</tr>
+			<td rowspan="2"><strong>IV<br>14:30</strong></td><td rowspan="2">Компл анализ, 513</td><td rowspan="2">ТВ, 515</td><td rowspan="2">ТВ, 601</td><td rowspan="2">ДУ, 632</td><td rowspan="2">БД, 511</td><td rowspan="2">ТВ, 623</td><td rowspan="2">Базы данных, 514</td>
+		</tr>
+		<tr></tr>
+		</tr>
+			<td rowspan="2"><strong>V<br>16:10</strong></td><td rowspan="2">ск КМ, МЭ, 628</td><td rowspan="2">ТВ, 515</td><td height="50%">КА, 605</td><td rowspan="2">ТВ, 608</td><td rowspan="2">ТВ, 623</td><td rowspan="2">БД, 514</td><td rowspan="2"></td>
 		</tr>
 		<tr>
-			<td><strong>II<br>10:40</strong></td><td>Функ.ан, 628</td><td>УМФ, 540</td><td>ТЧМК, 625</td><td>Базы Данных, 511</td><td>ДУ, 515</td><td>КА, 512</td><td>Прогр. Инж., 514</td>
+			<td height="50%">КА, 511</td>
+		</tr>
+		</tr>
+			<td rowspan="2"><strong>VI<br>17:50</strong></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td>
+		</tr>
+		<tr></tr>
+		</tr>
+			<td rowspan="12"><strong>С<br>Р<br>Е<br>Д<br>А</strong></td>
+			<td rowspan="2"><strong>I<br>9:00</strong></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td>
+		</tr>
+		<tr></tr>
+		</tr>
+			<td rowspan="2"><strong>II<br>10:40</strong></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td>
+		</tr>
+		<tr></tr>
+		</tr>
+			<td rowspan="2"><strong>III<br>12:50</strong></td><td rowspan="2" colspan="7">Ф И З И Ч Е С К А Я&nbsp&nbsp К У Л Ь Т У Р А</td>
+		</tr>
+		<tr></tr>
+		</tr>
+			<td rowspan="2"><strong>IV<br>14:30</strong></td><td rowspan="2">Базы данных, 611</td><td rowspan="2">Уст и упр движ, 628</td><td rowspan="2" colspan="3">Комбинаторные алгоритмы, 632</td><td rowspan="2" colspan="2">Интернет(Web и DHTML), 509</td>
+		</tr>
+		<tr></tr>
+		</tr>
+			<td rowspan="2"><strong>V<br>16:10</strong></td><td height="50%">БД, 514</td><td rowspan="2"></td><td rowspan="2" colspan="4">ск Матроиды и графы, 632</td><td rowspan="2">Интернет, 511</td>
 		</tr>
 		<tr>
-			<td><strong>III<br>12:50</strong></td><td></td><td>Физ-мех практика, 149</td><td colspan="4">Базы Данных, 632</td><td>КА, 628</td>
+			<td height="50%"></td>
 		</tr>
-		<tr>
-			<td><strong>IV<br>14:30</strong></td><td></td><td></td><td>Базы Данных, 526</td><td>КА, 625</td><td>КА, 534</td><td></td><td></td>
 		</tr>
-		<tr>
-			<td><strong>V<br>16:10</strong></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
+			<td rowspan="2"><strong>VI<br>17:50</strong></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td>
 		</tr>
-		<tr>
-			<td><strong>VI<br>17:50</strong></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
+		<tr></tr>
 		</tr>
-		<tr>
-			<td rowspan="6"><strong>В<br>Т<br>О<br>Р<br>Н<br>И<br>К</strong></td>
-			<td><strong>I<br>9:00</strong></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
+			<td rowspan="12"><strong>Ч<br>Е<br>Т<br>В<br>Е<br>Р<br>Г</strong></td>
+			<td rowspan="2"><strong>I<br>9:00</strong></td><td rowspan="2"><font color="red">Я</font></td><td rowspan="2"><font color="orange">ОЧЕНЬ</font></td><td rowspan="2"><font color="yellow">СИЛЬНО</font></td><td rowspan="2"><font color="green">УСТАЛ</font></td><td rowspan="2"><font color="cyan">ДЕЛАТЬ</font></td><td rowspan="2"><font color="blue">ЭТО</font></td><td rowspan="2"><font color="purple">РАСПИСАНИЕ</font></td>
 		</tr>
-		<tr>
-			<td><strong>II<br>10:40</strong></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
+		<tr></tr>
 		</tr>
-		<tr>
-			<td><strong>III<br>12:50</strong></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
+			<td rowspan="2"><strong>II<br>10:40</strong></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td>
 		</tr>
-		<tr>
-			<td><strong>IV<br>14:30</strong></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
+		<tr></tr>
 		</tr>
-		<tr>
-			<td><strong>V<br>16:10</strong></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
+			<td rowspan="2"><strong>III<br>12:50</strong></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td>
 		</tr>
-		<tr>
-			<td><strong>VI<br>17:50</strong></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
+		<tr></tr>
 		</tr>
-		<tr>
-			<td rowspan="6"><strong>С<br>Р<br>Е<br>Д<br>А</strong></td>
-			<td><strong>I<br>9:00</strong></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
+			<td rowspan="2"><strong>IV<br>14:30</strong></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td>
 		</tr>
-		<tr>
-			<td><strong>II<br>10:40</strong></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
+		<tr></tr>
 		</tr>
-		<tr>
-			<td><strong>III<br>12:50</strong></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
+			<td rowspan="2"><strong>V<br>16:10</strong></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td>
 		</tr>
-		<tr>
-			<td><strong>IV<br>14:30</strong></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
+		<tr></tr>
 		</tr>
-		<tr>
-			<td><strong>V<br>16:10</strong></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
+			<td rowspan="2"><strong>VI<br>17:50</strong></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td>
 		</tr>
-		<tr>
-			<td><strong>VI<br>17:50</strong></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
+		<tr></tr>
 		</tr>
-		<tr>
-			<td rowspan="6"><strong>Ч<br>Е<br>Т<br>В<br>Е<br>Р<br>Г</strong></td>
-			<td><strong>I<br>9:00</strong></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
+			<td rowspan="12"><strong>П<br>Я<br>Т<br>Н<br>И<br>Ц<br>А</strong></td>
+			<td rowspan="2"><strong>I<br>9:00</strong></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td>
 		</tr>
-		<tr>
-			<td><strong>II<br>10:40</strong></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
+		<tr></tr>
 		</tr>
-		<tr>
-			<td><strong>III<br>12:50</strong></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
+			<td rowspan="2"><strong>II<br>10:40</strong></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td>
 		</tr>
-		<tr>
-			<td><strong>IV<br>14:30</strong></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
+		<tr></tr>
 		</tr>
-		<tr>
-			<td><strong>V<br>16:10</strong></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
+			<td rowspan="2"><strong>III<br>12:50</strong></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td>
 		</tr>
-		<tr>
-			<td><strong>VI<br>17:50</strong></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
+		<tr></tr>
 		</tr>
-		<tr>
-			<td rowspan="6"><strong>П<br>Я<br>Т<br>Н<br>И<br>Ц<br>А</strong></td>
-			<td><strong>I<br>9:00</strong></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
+			<td rowspan="2"><strong>IV<br>14:30</strong></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td>
 		</tr>
-		<tr>
-			<td><strong>II<br>10:40</strong></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
+		<tr></tr>
 		</tr>
-		<tr>
-			<td><strong>III<br>12:50</strong></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
+			<td rowspan="2"><strong>V<br>16:10</strong></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td>
 		</tr>
-		<tr>
-			<td><strong>IV<br>14:30</strong></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
+		<tr></tr>
 		</tr>
-		<tr>
-			<td><strong>V<br>16:10</strong></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
+			<td rowspan="2"><strong>VI<br>17:50</strong></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td>
 		</tr>
-		<tr>
-			<td><strong>VI<br>17:50</strong></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
+		<tr></tr>
 		</tr>
-		<tr>
-			<td rowspan="6"><strong>С<br>У<br>Б<br>Б<br>О<br>Т<br>А</strong></td><td><strong>I<br>9:00</strong></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
+			<td rowspan="12"><strong>С<br>У<br>Б<br>Б<br>О<br>Т<br>А</strong></td><td rowspan="2"><strong>I<br>9:00</strong></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td>
 		</tr>
-		<tr>
-			<td><strong>II<br>10:40</strong></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
+		<tr></tr>
 		</tr>
-		<tr>
-			<td><strong>III<br>12:50</strong></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
+			<td rowspan="2"><strong>II<br>10:40</strong></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td>
 		</tr>
-		<tr>
-			<td><strong>IV<br>14:30</strong></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
+		<tr></tr>
 		</tr>
-		<tr>
-			<td><strong>V<br>16:10</strong></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
+			<td rowspan="2"><strong>III<br>12:50</strong></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td>
 		</tr>
-		<tr>
-			<td><strong>VI<br>17:50</strong></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td>
+		<tr></tr>
+		</tr>
+			<td rowspan="2"><strong>IV<br>14:30</strong></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td>
+		</tr>
+		<tr></tr>
+		</tr>
+			<td rowspan="2"><strong>V<br>16:10</strong></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td>
+		</tr>
+		<tr></tr>
+		</tr>
+			<td rowspan="2"><strong>VI<br>17:50</strong></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td>
 		</tr>
 	</table>
 </body>
