--- a/index.html
+++ b/index.html
@@ -5,15 +5,15 @@
 	<title>ГЕРОИ CALL & DUTY FOREVER: WILD HUNT</title>
 	<style>
 		table {
-			border: 1px solclass black;
+			border: 1px solid black;
 			text-align: center;
-			wclassth: 100%;
+			width: 100%;
 			border-collapse: collapse;
 		}
 		td, th {
-			border: 1px solclass black;
+			border: 1px solid black;
 		}
-		#half_height {
+		.half_height {
 			height: 50%;
 		}
 	</style>
@@ -23,7 +23,6 @@
 		<tr>
 			<td></td><td></td><td><strong>МТ-301</strong></td><td><strong>МХ-301</strong></td><td><strong>КБ-301</strong></td><td><strong>КН-301</strong></td><td><strong>КН-302</strong></td><td><strong>ФТ-301</strong></td><td><strong>ПИ-301</strong></td>
 		</tr>
-		<tr></tr>
 		<tr>
 			<td rowspan="12"><strong>П<br>О<br>Н<br>Е<br>Д<br>Е<br>Л<br>Ь<br>Н<br>И<br>К</strong></td>
 			<td rowspan="2"><strong>I<br>9:00</strong></td><td rowspan="2">Физика, 628</td><td rowspan="2">УМФ, 540</td><td class="half_height"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2">Прогр. Инж., 611</td>
@@ -154,7 +153,8 @@
 		</tr>
 		<tr></tr>
 		<tr>
-			<td rowspan="12"><strong>С<br>У<br>Б<br>Б<br>О<br>Т<br>А</strong></td><td rowspan="2"><strong>I<br>9:00</strong></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td>
+			<td rowspan="12"><strong>С<br>У<br>Б<br>Б<br>О<br>Т<br>А</strong></td>
+			<td rowspan="2"><strong>I<br>9:00</strong></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td>
 		</tr>
 		<tr></tr>
 		<tr>
@@ -176,7 +176,7 @@
 		<tr>
 			<td rowspan="2"><strong>VI<br>17:50</strong></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td><td rowspan="2"></td>
 		</tr>
-		<tr><td></td><td></td><td></td><td></td><td></td><td></td><td></td><td></td></tr>
+		<tr></tr>
 	</table>
 </body>
 </html>
