--- a/index.html
+++ b/index.html
@@ -16,6 +16,10 @@
 		.half_height {
 			height: 50%;
 		}
+		body {
+			background-image: url("vovka.png");
+			background-size: 100%;
+		}
 	</style>
 </head>
 <body>
