--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 	<title>Мои дз</title>
 </head>
 <body>
-	<a href="schedule.html">Расписание</a>
+	<a href="schedule.html">Расписание</a><br<
 	<a href="registration.html">Регистрация</a>
 </body>
 </html>
