--- a/index.html
+++ b/index.html
@@ -2,10 +2,11 @@
 <html lang="ru">
 <head>
 	<meta charset="utf-8">
-	<title>Мои дз</title>
+	<title>Мои дз(Кошара Павел)</title>
 </head>
 <body>
 	<a href="schedule.html">Расписание</a><br>
 	<a href="registration.html">Регистрация</a>
+	<a href="media.html">@media print</a>
 </body>
 </html>
