--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 </head>
 <body>
 	<a href="schedule.html">Расписание</a><br>
-	<a href="registration.html">Регистрация</a>
+	<a href="registration.html">Регистрация</a><br>
 	<a href="media.html">@media print</a>
 </body>
 </html>
